Updated roks, cover images, and footer

--- a/index.html
+++ b/index.html
@@ -105,24 +105,24 @@
                     <li>
                         <a href="satellite.html">
                             <figure>
-                                <img class="cover-image" src="images/satellite/satellite-create-dark-gray-bkgd.jpeg" alt="">
+                                <img class="cover-image" src="images/satellite/satellite-endpoints-cover.png" alt="">
                             </figure>
                             <figcaption>
                                 <p class="meta-text">2021</p>
                                 <h2><strong>IBM Cloud Satellite</strong></h2>
-                                <p><em>A new product based on an emerging cloud computing model called distributed cloud</em></p>
+                                <p><em>A new product enabling IT infrastructure teams to deploy workloads across any environment</em></p>
                             </figcaption>
                         </a>
                     </li>
                     <li>
                         <a href="roks.html">
                             <figure>
-                                <img class="cover-image" src="images/roks/roks-catalog-laptop.png" alt="">
+                                <img class="cover-image" src="images/roks/roks-create-laptop.png" alt="">
                             </figure>
                             <figcaption>
                                 <p class="meta-text">2019</p>
                                 <h2><strong>Red Hat OpenShift on IBM Cloud</strong></h2>
-                                <p><em>A new product representing the first integration as part of IBM’s acquisition of Red Hat</em></p>
+                                <p><em>A new product streamlining deployment and management of OpenShift environments for IT infrastructure teams</em></p>
                             </figcaption>
                         </a>
                     </li>
@@ -143,7 +143,7 @@
         </article>
     </main>
     <footer>
-        <p>&copy; Gaby Moreno César | <a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby</p>
+        <p>&copy; 2024 Gaby Moreno César | <a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby</p>
     </footer>
 </body>
 </html>
