--- a/roks.html
+++ b/roks.html
@@ -29,7 +29,7 @@
         <article class="article"> 
             <section id="title">
                 <h2>Red Hat OpenShift on IBM Cloud</h2>
-                <p class="subtitle">A new product representing the first integration as part of IBM’s acquisition of Red Hat.</p>
+                <p class="subtitle">A new product streamlining deployment and management of OpenShift environments for IT infrastructure teams</p>
                 <nav class="article-nav">
                     <ul>
                         <li><a href="#synopsis" class="subtle-link">Synopsis</a></li>
@@ -40,15 +40,15 @@
                 </nav>
             </section>
 
-            <img class="cover-image" src="images/roks/roks-catalog-laptop.png" alt="">
+            <img class="cover-image" src="images/roks/roks-create-laptop.png" alt="">
             
             <section id="synopsis" class="no-padding layout-container">
                 <section class="solid-border">
                     <h3 class="compress">Red Hat OpenShift on IBM Cloud</h3>
                     <p class="subtle-text compress meta">2019 / Product Design</p>
-                    <p class="accent-text meta"> » 
+                    <p class="accent-text meta">
                         <a class="primary-link" href="https://www.ibm.com/products/openshift" target="_blank">
-                            ibm.com/.../openshift
+                            Visit <span>&rarr;</span>
                         </a>
                     </p>
                     <dl class="meta">
@@ -65,10 +65,11 @@
                 </section>
 
                 <section class="section-synopsis-cont">
-                    <p>Our Kubernetes design team returned from KubeCon Seattle in the wake of IBM’s $34 billion acquisition of Red Hat. We soon found out we’d have the chance to design the first integration of these two brands as our product team began work on a managed version of Red Hat’s flagship product, the OpenShift Container Platform, to be offered on IBM Cloud. As part of the design team, I helped with everything from user research, to concepting, crits, and data analysis using AI.</p>
-                    <p>Designing ROKS, was a fascinating experience for me, it let me see first hand the huge benefit that a managed cloud service can bring to IT infrastructure teams. We learned it was not uncommon for full teams to be staffed in order to install, run and maintain OpenShift environments. Through offering easy install, IBM-management, and one-click updates, we were essentially letting clients focus their time and money on their core business.</p>
-                    <p>As our team worked through the Closed Beta, I was able to use Watson NLP to analyze our Slack channels, surface and address trends as part of our continuous improvement.</p>
-                    <p>Red Hat OpenShift on IBM Cloud launched right as IBM closed it’s landmark acquisition of Red Hat. It powered the Masters in its first year.</p>
+                    <p>Following IBM’s acquisition of Red Hat for $34 billion, we soon found out we’d have the chance to design the first integration of these two brands. Our goal was to create a managed version of Red Hat’s flagship product, the OpenShift Container Platform, to be offered on IBM Cloud. The product would be short named ROKS. As a member of the design team, my responsibilities involved a wide range of tasks, including user research, conceptualization, design critiques, and data analysis using AI.</p>
+                    <p>The main challenge we encountered was the complexity associated with traditional OpenShift deployments. During user research, we learned it was not uncommon for full teams to be staffed in order to install, run and maintain OpenShift environments. Our goal was to simplify this process by offering a managed cloud service, allowing clients to focus their time and money on their core business.</p>
+                    <p>Our team focused a lot of time and attention on key brand moments, such as when a cluster administrator launches the OpenShift console for the first time from the IBM Cloud platform. Leveraging design critiques, we focused on getting this meeting of two renown brands just right. We also hosted user feedback sessions with OpenShift administrators to ensure the experience was meeting their needs.</p>
+                    <p>As part of our iterative approach, our team set up a Closed Beta where we were able to get feedback from internal and later external teams on an early version of the ROKS product. I was able to use Watson Natural Language Processing (NLP) to analyze communication within our beta users Slack channels. This AI-driven analysis helped us identify emerging trends and address issues in real-time, contributing to the continuous improvement of ROKS.</p>
+                    <p>Red Hat OpenShift on IBM Cloud launched right as IBM closed it’s landmark acquisition of Red Hat. It now powers the the Masters and will.i.am’s I.AM+ Omega AI platform, among other notable scenarios.</p>
                 </section>
         </section>
 
@@ -152,7 +153,7 @@
     </main>
 
     <footer>
-        <p><a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby.</p>
+        <p>&copy; 2024 Gaby Moreno César | <a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby</p>
     </footer>
 
     <div id="lightbox" class="lightbox__close">
