--- a/satellite.html
+++ b/satellite.html
@@ -31,7 +31,7 @@
         <article class="article"> 
             <section id="title">
                 <h2>IBM Cloud Satellite</h2>
-                <p class="subtitle">A new product enabling IT teams to deploy workloads across any environment.</p>
+                <p class="subtitle">A new product enabling IT infrastructure teams to deploy workloads across any environment</p>
                 <nav class="article-nav">
                     <ul>
                         <li><a href="#synopsis" class="subtle-link">Synopsis</a></li>
@@ -45,7 +45,7 @@
                 </nav>
             </section>
 
-            <img class="cover-image" src="images/satellite/satellite-create-dark-gray-bkgd.jpeg" alt="">
+            <img class="cover-image" src="images/satellite/satellite-endpoints-cover.png" alt="">
             
             <section id="synopsis" class="no-padding layout-container">
                 <section class="solid-border">
@@ -213,7 +213,7 @@
     </main>
 
     <footer>
-        <p><a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby.</p>
+        <p>&copy; 2024 Gaby Moreno César | <a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby</p>
     </footer>
 
     <div id="lightbox" class="lightbox__close">
