--- a/k8s.html
+++ b/k8s.html
@@ -168,7 +168,7 @@
     </main>
 
     <footer>
-        <p><a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby.</p>
+        <p>&copy; 2024 Gaby Moreno César | <a href="https://github.com/morengab/morengab.github.io" target="_blank">Hand coded</a> by Gaby</p>
     </footer>
 
     <div id="lightbox" class="lightbox__close">
