--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 <body>
     <header>    
         <nav>
-            <span class="nav-logo"><a href="/"><img src="images/gaby-logo.svg" width="50px" alt=""></a></span>
+            <span class="nav-logo"><a href="/"><img src="images/gaby-logo.svg" width="50px" alt=""> <span class="nav-name"> Gaby Moreno César</span></a></span>
+            
             <span class="nav-link no-margin-right"><a href="https://www.linkedin.com/in/gabymorenocesar/" target="_blank">LinkedIn</a></span>
             <span class="nav-link"> | </span>
             <span class="nav-link"><a href="./about.html">About</a></span>
@@ -97,7 +98,7 @@
     <main>
         <article>
             <section class="compress">
-                <p><strong>Gaby Moreno César</strong> is a Design Principal at IBM with a decade of experience designing award-winning, enterprise products. She currently works on IBM Cloud and loves serving people and businesses seeking transformation through the power of human-centered design and technology.</p>
+                <p>Hi, I'm Gaby! I'm a Design Principal at IBM working on IBM Cloud.</p>
             </section>
             <section id="work" class="more-padding-top">  
                 <h3 class="expand-more">Selected Work</h3>    
