--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
     <header>    
         <nav>
-            <span class="nav-logo"><a href="/"><img src="images/gaby-logo.svg" width="50px" alt=""> <span class="nav-name"> Gaby Moreno César</span></a></span>
+            <span class="nav-logo"><a href="/"><img src="images/gaby-logo.svg" width="50px" alt=""></a></span>
             
             <span class="nav-link no-margin-right"><a href="https://www.linkedin.com/in/gabymorenocesar/" target="_blank">LinkedIn</a></span>
             <span class="nav-link"> | </span>
@@ -98,7 +98,7 @@
     <main>
         <article>
             <section class="compress">
-                <p>Hi, I'm Gaby! I'm a Design Principal at IBM working on IBM Cloud.</p>
+                <p>Hi, I'm Gaby! I'm a Design Principal at IBM based in Austin, Texas.</p>
             </section>
             <section id="work" class="more-padding-top">  
                 <h3 class="expand-more">Selected Work</h3>    
